<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Weather Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_preference">Preference</string>
    <!--label for the location preference [char limit 30]-->
    <string name="pref_location_label">Location</string>
    <!--key name for storing location in SharedPreferences [char limit none]-->
    <string name="pref_location_key" translatable="false">location</string>
    <!--default postal code for location preference [char limit none]-->
    <string name="pref_location_default" translatable="false">94043</string>
    <!-- label for unit preference-->
    <string name="pref_units_label">Pick Your Units</string>
    <!--key name for storing units preference in SharedPreferences -->
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default">Metric</string>
    <string name="pref_summary">Pick aaa unit</string>

</resources>
